fix(side-menu): align styles with figma design (#1253)
* fix(side-menu): align styles with figma design

* chore: update snapshot after rebase

* refactor(side-menu): shorthand padding syntax

--- a/packages/core/src/components/side-menu/side-menu-dropdown-list-item/side-menu-dropdown-list-item.scss
+++ b/packages/core/src/components/side-menu/side-menu-dropdown-list-item/side-menu-dropdown-list-item.scss
@@ -47,11 +47,8 @@
   .component.component-selected {
     ::slotted(a),
     ::slotted(button) {
-      border-left: 4px solid var(--tds-nav-item-border-color-active);
-      padding-left: 20px;
-      background-color: var(
-        --tds-header-nav-item-dropdown-opened-background-selected
-      ); //var(--tds-grey-868);
+      box-shadow: inset 4px 0 0 var(--tds-nav-item-border-color-active);
+      background-color: var(--tds-header-nav-item-dropdown-opened-background-selected);
     }
   }
 
@@ -59,7 +56,16 @@
     &:not(.component-collapsed) {
       ::slotted(a),
       ::slotted(button) {
-        padding-left: 56px;
+        padding: 16px 48px 16px 58px;
+      }
+    }
+  }
+
+  .component.component-dropdown-has-user {
+    &:not(.component-collapsed) {
+      ::slotted(a),
+      ::slotted(button) {
+        padding: 16px 48px 16px 64px;
       }
     }
   }
